--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -19,7 +19,7 @@ jobs:
           node-version: 16.x
 
       - run: npm i
-      - run: npm run test
+      - run: npm run test -- --coverage
       - run: npm run build
       - uses: actions/upload-artifact@v4
         with:
