--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: "0 12 * * *"
 
 defaults:
   run:
@@ -23,6 +21,8 @@ jobs:
       - run: npm i
       - run: npm run test -- --coverage
       - run: npm run build
+      - run: node dist/index.js &
+      - run: npm run test:api
       - uses: actions/upload-artifact@v4
         if: always()
         with:
